# aula01_bootcamp_python

./: exemplo_01.py  pyproject.toml
aula07/: etl.py  main.py  vendas.csv
